gateway/1.3/modules/ROOT/pages/flex-conn-shared-storage-config.adoc
= Configuring Shared Storage for Flex Gateway in Connected Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-mode: conn

// intro and graphics for each option - linux, docker, k8s
include::partial$task-shared-storage-config.adoc[tags=intro1;intro2;icon-table;byb;linux;sample-config-all-intro]
// configure shared storage for Flex Gateway as a Linux Service
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// configure shared storage for Flex Gateway in a Docker container
include::partial$task-shared-storage-config.adoc[tags=docker-intro]
+
include::partial$task-reg-run-flex-gateway.adoc[tags=start-command-local]
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all-intro]
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

//configure shared storage for Flex Gateway as an K8s Ingress Controller
include::partial$task-shared-storage-config.adoc[tags=k8s;sample-config-all-intro]

include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

== See Also

* xref:flex-local-shared-storage-config.adoc[Configuring Shared Storage for Flex Gateway in Local Mode]
* xref:flex-local-configuration-reference-guide.adoc#shared-storage[Declarative Configuration Reference Guide]